syntax = "proto3";

package device_tracker;

option go_package = "github.com/dak151449/IOT_Device_Tracker_Service/pkg/device_tracker;api";

service DeviceTrackerService {
	rpc ToUpper(ToUpperRequest) returns (ToUpperResponse) {}
}

message ToUpperRequest {
	string input_string = 1;
}

message ToUpperResponse {
	string converted_string = 1;
}